welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: ')' expected but 'for' found.
  for (j <- 1 to (getMondeLargeur()) {
  ^Array2:18: error: ')' expected but '}' found.
  }
  ^Array2:19: error: ')' expected but '}' found.
} 
^